--- a/package.json
+++ b/package.json
@@ -7,44 +7,24 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "deploy": "npm run test && npm run clean && npm run build",
+    "deploy": "npm run clean && npm run build",
     "develop": "gatsby develop",
-    "eslint:github-action": "eslint src/",
-    "fix": "npm run lint -- --fix",
     "format": "prettier --write .",
-    "lint": "eslint",
     "pre-commit": "pretty-quick --staged",
-    "serve": "gatsby serve",
-    "test": "npm run lint",
     "prepare": "husky install"
   },
   "dependencies": {
     "@lekoarts/gatsby-theme-minimal-blog": "6.2.1",
     "@theme-ui/color": "^0.16.1",
     "@theme-ui/presets": "^0.16.1",
-    "@types/theme-ui": "^0.3.7",
     "gatsby": "^5.12.11",
     "gatsby-cli": "^5.12.4",
     "gatsby-plugin-google-analytics": "^5.12.0",
-    "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-netlify": "^5.1.1",
     "gatsby-plugin-offline": "^6.12.3",
-    "gatsby-plugin-sitemap": "^6.12.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "gatsby-plugin-sitemap": "^6.12.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.62.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.55.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-mdx": "^2.2.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "gatsby-plugin-eslint": "^4.0.4",
     "husky": "^8.0.3",
     "prettier": "^3.1.0",
     "pretty-quick": "^3.1.3",
