--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,5 +3,4 @@ updates:
   - package-ecosystem: npm
     directory: '/'
     schedule:
-      interval: monthly
-    open-pull-requests-limit: 10
+      interval: weekly
