--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "deploy": "npm run clean && npm run build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write .",
     "pre-commit": "pretty-quick --staged",
     "prepare": "husky install"
